--- a/Angular/src/app/login/login.component.html
+++ b/Angular/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<h1>Login form</h1>
+<form (ngSubmit)="onSubmit()">
+<div>
+    <input [(ngModel)]="loginform.username" id="username" name="username" >
+    <input [(ngModel)]="loginform.password"  name="password" type="password" required>
+    <button type="submit">Login</button>
+</div>
+
+</form>
